--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polyv/utils",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Utility functions of Polyv frontend development.",
   "keywords": [
     "polyv",
@@ -22,12 +22,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/polyv/utils"
+    "url": "https://github.com/polyv/fed-common-utils"
   },
   "bugs": {
-    "url": "https://github.com/polyv/utils/issues"
+    "url": "https://github.com/polyv/fed-common-utils/issues"
   },
-  "homepage": "https://polyv.github.io/utils/",
+  "homepage": "https://polyv.github.io/fed-common-utils/index.html",
   "engines": {
     "node": ">=8.0.0"
   },
