--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polyv/utils",
-  "version": "1.6.3-beta.2",
+  "version": "1.6.3",
   "description": "Utility functions of Polyv frontend development.",
   "keywords": [
     "polyv",
