--- a/package.json
+++ b/package.json
@@ -32,28 +32,35 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-json-strings": "^7.12.1",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-json-strings": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.14.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.4.0",
-    "core-js": "^3.8.1",
+    "copy-webpack-plugin": "^6.4.1",
+    "core-js": "^3.15.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.15.0",
+    "eslint": "^7.31.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "glob": "^7.1.6",
-    "html-webpack-plugin": "^4.5.0",
-    "jsdoc": "^3.6.6",
-    "regenerator-runtime": "^0.13.7",
+    "eslint-plugin-sonarjs": "^0.9.1",
+    "glob": "^7.1.7",
+    "html-webpack-plugin": "^4.5.2",
+    "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
-    "webpack": "^4.44.2",
+    "ts-loader": "^9.2.3",
+    "typedoc": "^0.21.4",
+    "typescript": "^4.3.5",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.1"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@just4/util": "0.1.0-beta.2"
   }
 }
