--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,8 +5,7 @@
     "module": "es6",
     "target": "es6",
     "declaration": true,
-    "noImplicitAny": true,
     "moduleResolution": "node",
-    "strictNullChecks": true
+    "strict": true
   }
 }
