--- a/package.json
+++ b/package.json
@@ -29,35 +29,36 @@
   },
   "homepage": "https://polyv.github.io/fed-common-utils/index.html",
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=14.0.0"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-json-strings": "^7.14.5",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-json-strings": "^7.16.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.14.8",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
+    "@babel/preset-env": "^7.16.4",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^6.4.1",
-    "core-js": "^3.15.2",
+    "core-js": "^3.19.2",
     "cross-env": "^7.0.3",
-    "eslint": "^7.31.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-sonarjs": "^0.9.1",
-    "glob": "^7.1.7",
+    "eslint": "^8.3.0",
+    "eslint-plugin-sonarjs": "^0.11.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "glob": "^7.2.0",
     "html-webpack-plugin": "^4.5.2",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
-    "ts-loader": "^9.2.3",
-    "typedoc": "^0.21.4",
-    "typescript": "^4.3.5",
+    "ts-loader": "^8.3.0",
+    "typedoc": "^0.22.10",
+    "typescript": "^4.5.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^3.11.3",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
