--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.config.js",
-    "gen-doc": "rimraf ./docs/2.x && typedoc --tsconfig ./src/tsconfig.json",
+    "gen-doc": "rimraf ./docs/2.x && typedoc --options ./typedoc.js --tsconfig ./src/tsconfig.json",
     "lint": "eslint ./src/*.ts",
     "build": "npm run lint && rimraf ./dist/** && tsc -p ./src/tsconfig.json && tsc -p ./src/tsconfig.es5.json"
   },
@@ -27,7 +27,7 @@
   },
   "homepage": "https://polyv.github.io/fed-common-utils/index.html",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=10.0.0"
   },
   "private": true,
   "devDependencies": {
