--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "files": [
     "dist/**/*"
   ],
-  "miniprogram": "./dist/es",
+  "miniprogram": "./",
   "main": "./dist/es/index.js",
   "types": "./dist/es/index.d.ts",
   "author": "Polyv frontend team",
