--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polyv/utils",
-  "version": "1.9.0-beta.1",
+  "version": "1.9.0",
   "description": "Utility functions of Polyv frontend development.",
   "keywords": [
     "polyv",
