--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.config.js",
     "gen-doc": "rimraf ./docs/2.x && typedoc --options ./typedoc.js --tsconfig ./src/tsconfig.json",
-    "lint": "eslint --resolve-plugins-relative-to /Users/heerolaw/Polyv/Git/sdk/eslint-config/node_modules ./src/*.ts",
+    "lint": "eslint ./src/*.ts",
     "after-tsc": "node ./build/after-tsc",
     "build": "npm run lint && rimraf ./dist/** && tsc -p ./src/tsconfig.json && tsc -p ./src/tsconfig.es5.json && npm run after-tsc"
   },
