--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "webpack-dev-server": "^3.11.3",
     "webpack-merge": "^5.8.0"
   },
-  "miniprogram": "./"
+  "miniprogram": "./",
+  "dependencies": {
+    "@just4/querystring": "^2.0.0",
+    "@just4/ua-info": "^3.2.0",
+    "@polyv/web-view-bridge": "^0.1.0-rc.1"
+  }
 }
