refactor: 优化 isMobile 判断

--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   "miniprogram": "./",
   "dependencies": {
     "@just4/querystring": "^2.0.0",
-    "@just4/ua-info": "^3.2.0",
-    "@polyv/web-view-bridge": "^0.1.0-rc.1"
+    "@just4/ua-info": "^3.2.0"
   }
 }
