--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polyv/utils",
-  "version": "2.14.0-beta.1",
+  "version": "2.14.0-beta.2",
   "description": "Utility functions of Polyv frontend development.",
   "keywords": [
     "polyv",
@@ -61,6 +61,8 @@
     "@just4/querystring": "^2.0.0",
     "@just4/ua-info": "^3.2.0",
     "@types/md5": "^2.3.5",
-    "md5": "^2.3.0"
+    "@types/sha256": "^0.2.2",
+    "md5": "^2.3.0",
+    "sha256": "^0.2.0"
   }
 }
