--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es6",
     "declaration": true,
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
   }
