--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gen-doc": "rimraf ./docs/2.x && typedoc --options ./typedoc.js --tsconfig ./src/tsconfig.json",
     "lint": "eslint ./src/*.ts",
     "after-tsc": "node ./build/after-tsc",
-    "build": "npm run lint && rimraf ./dist/** && tsc -p ./src/tsconfig.json && tsc -p ./src/tsconfig.es5.json && npm run after-tsc"
+    "build": "npm run lint && rimraf --glob ./dist/** && tsc -p ./src/tsconfig.json && tsc -p ./src/tsconfig.es5.json && npm run after-tsc"
   },
   "author": "Polyv frontend team",
   "license": "MIT",
